--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,14 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>HR Data Drive</title>
+
+    <style>
+      html, body {
+          margin: 0;
+          padding: 0;
+          height: 100%;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
